--- a/package.json
+++ b/package.json
@@ -9,18 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^5.0.2",
+    "install": "^0.13.0",
+    "mapbox-gl": "^3.1.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.0",
+    "next": "^14.1.0",
+    "npm": "^10.4.0",
     "react": "^18",
+    "react-autocomplete": "^1.8.1",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/mapbox__mapbox-gl-geocoder": "^4.7.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
-  }
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
+  },
+  "dev": "NODE_OPTIONS='--inspect' next dev"
 }
