--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "use-debounce": "^10.0.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@types/mapbox__mapbox-gl-geocoder": "^4.7.7",
     "@types/node": "^20",
     "@types/react": "^18",
