--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mapbox/mapbox-gl-geocoder": "^5.0.2",
+    "@radix-ui/react-icons": "^1.3.2",
     "install": "^0.13.0",
     "mapbox-gl": "^3.1.0",
     "mongodb": "^6.3.0",
