--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 	"dependencies": {
 		"@mapbox/mapbox-gl-geocoder": "^5.0.2",
 		"@radix-ui/react-icons": "^1.3.2",
+		"@supabase/ssr": "^0.6.1",
+		"@supabase/supabase-js": "^2.49.4",
 		"install": "^0.13.0",
 		"mapbox-gl": "^3.1.0",
 		"mongodb": "^6.3.0",
