--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18",
     "react-autocomplete": "^1.8.1",
     "react-dom": "^18",
+    "tailwind-merge": "^3.2.0",
     "use-debounce": "^10.0.0"
   },
   "devDependencies": {
