--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@supabase/ssr": "^0.6.1",
 		"@supabase/supabase-js": "^2.49.4",
 		"install": "^0.13.0",
+		"lucide-react": "^0.503.0",
 		"mapbox-gl": "^3.1.0",
 		"mongodb": "^6.3.0",
 		"mongoose": "^8.1.0",
